# bioreactor-raspi-firmware

./: .gitignore  CMakeLists.txt  Doxyfile  I2CSlave.h  I2CSlaveError.cpp  I2CSlaveError.h  MCP9600.cpp  MCP9600.h  main.cpp
docs/html/: _i2_c_slave_8cpp.html  _i2_c_slave_8h.html  _i2_c_slave_8h_source.html  _i2_c_slave_error_8cpp.html  _i2_c_slave_error_8h.html  _i2_c_slave_error_8h_source.html  _m_c_p9600_8cpp.html  _m_c_p9600_8h.html  _m_c_p9600_8h_source.html  annotated.html  class_i2_c_file_descriptor_error-members.html  class_i2_c_file_descriptor_error.html  class_i2_c_read_error-members.html  class_i2_c_read_error.html  class_i2_c_slave-members.html  class_i2_c_slave.html  class_i2_c_slave_error-members.html  class_i2_c_slave_error.html  class_i2_c_write_error-members.html  class_i2_c_write_error.html  class_m_c_p9600-members.html  class_m_c_p9600.html  classes.html  dir_246afb5ea61ff1efd184a050e878b134.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  hierarchy.html  index.html
docs/html/search/: all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  searchdata.js
src/: CMakeLists.txt
src/i2c_devices/: CMakeLists.txt  I2CSlave.cpp  I2CSlaveError.h  MCP9600.cpp  MCP9600.h
test/: CMakeLists.txt  MCP9600_test.cpp
